--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
-          <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
-        </a>
-      <a href="https://stewilondanga.github.io/" class="social">
-          <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
-        </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
-          <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
-        </a>
-    </div>
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+      <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
+    </a>
+    <a href="https://stewilondanga.github.io/" class="social">
+      <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
+    </a>
+    <a href="https://twitter.com/stew_ilondanga" class="social">
+      <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
+    </a>
+  </div>
 
-    <ul>
-      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, saepe suscipit iusto harum fugiat, sequi eaque molestiae aliquam qui vitae voluptas architecto? Soluta molestiae accusamus molestias sed in, corrupti sapiente.</li>
-      <li>Fuga velit nulla maxime consectetur reprehenderit sed illo, facilis recusandae, corporis qui, dolore nihil maiores? Quaerat error adipisci provident. Asperiores repellendus deserunt necessitatibus modi quia perferendis aliquam ex iure quisquam.</li>
-      <li>In, laudantium. Error necessitatibus veritatis mollitia cumque consequuntur iste distinctio aliquid in saepe magnam labore ullam excepturi sapiente sunt at, laudantium ex nisi dolorum harum, eaque, numquam tempore minus. Deserunt!</li>
-      <li>Delectus quia reprehenderit saepe totam similique molestiae enim expedita nulla? Error illo ipsam quo beatae quam expedita, aut laboriosam. Illo aliquam eum quidem nobis laudantium, ut maiores esse vel officia!</li>
-      <li>Distinctio ad animi rerum, corporis porro dolorem expedita magni quibusdam accusamus blanditiis placeat! Itaque quo eum soluta. Nulla delectus libero soluta laudantium ut rem rerum error est, similique, architecto harum.</li>
-    </ul>
+  <ul>
+    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, saepe suscipit iusto harum fugiat, sequi eaque molestiae aliquam qui vitae voluptas architecto? Soluta molestiae accusamus molestias sed in, corrupti sapiente.</li>
+    <li>Fuga velit nulla maxime consectetur reprehenderit sed illo, facilis recusandae, corporis qui, dolore nihil maiores? Quaerat error adipisci provident. Asperiores repellendus deserunt necessitatibus modi quia perferendis aliquam ex iure
+      quisquam.</li>
+    <li>In, laudantium. Error necessitatibus veritatis mollitia cumque consequuntur iste distinctio aliquid in saepe magnam labore ullam excepturi sapiente sunt at, laudantium ex nisi dolorum harum, eaque, numquam tempore minus. Deserunt!</li>
+    <li>Delectus quia reprehenderit saepe totam similique molestiae enim expedita nulla? Error illo ipsam quo beatae quam expedita, aut laboriosam. Illo aliquam eum quidem nobis laudantium, ut maiores esse vel officia!</li>
+    <li>Distinctio ad animi rerum, corporis porro dolorem expedita magni quibusdam accusamus blanditiis placeat! Itaque quo eum soluta. Nulla delectus libero soluta laudantium ut rem rerum error est, similique, architecto harum.</li>
+  </ul>
 
   <section id="contact">
     <div class="overlay">
       <div class="containers">
 
         <h1>
-<script>
-with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
-h='<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
-while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write(h+'</table>')
-</script>
-</h1>
+          <script>
+            with(new Date) c = -new Date(y = getFullYear(), m = getMonth()).getDay(x = new Date(y, ++m, 0).getDate(b = -1))
+            h = '<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 ' + ' ' + y + '/' + m + '<tr>' + 'SuMoTuWeThFrSa'.replace(/(..)/g, '<th>$1')
+            while ((b++ > 5 ? b = 0 : b) | c < x) h += (b ? '' : '<tr>') + '<td>' + (++c < 1 | c > x ? '-' : c);
+            document.write(h + '</table>')
+          </script>
+        </h1>
 
       </div>
     </div>
